# LibScreenshots

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  WINDOWS.md
.github/workflows/: build.yml  testing.yml
cmake/: Graphics.cmake  LibGraphics-LS.cmake  LibGraphics-LibScreenshots.cmake  LibGraphics.cmake  LibGraphicsConfig.cmake.in  LibScreenshotsConfig.cmake.in  PipeWire.cmake  WLRoots-LibScreenshots.cmake  WLRoots.cmake  Wayland.cmake  Windows-LibScreenshots.cmake  Windows.cmake  X11-LibScreenshots.cmake  X11.cmake
include/: LibScreenshots.hpp  library.h
include/LibScreenshots/: IScreenshotBackend.hpp  Screenshot.hpp  ScreenshotResult.hpp
include/LibScreenshots/internals/: export.hpp  platform_dispatch.hpp
include/private/LibScreenshots/: BackendSelector.hpp  IScreenshotBackend.hpp  ScreenshotResult.hpp  export.hpp
include/private/LibScreenshots/backends/: ScreenshotWLRoots.hpp  ScreenshotWindows.hpp  ScreenshotX11.hpp
include/public/LibScreenshots/: BackendSelector.hpp  IScreenshotBackend.hpp  LibScreenshots.hpp  ScreenshotResult.hpp  export.hpp
include/public/LibScreenshots/exceptions/: ScreenshotException.hpp
src/: LibScreenshots.cpp  main.cpp
src/backends/: ScreenshotWLRoots.cpp  ScreenshotWindows.cpp  ScreenshotX11.cpp
src/pipewire/: ScreenshotPipeWire.cpp  ScreenshotPipeWire.hpp
src/wayland/: ScreenshotWayland.cpp  ScreenshotWayland.hpp
src/windows/: ScreenshotWin32.cpp  ScreenshotWin32.hpp
src/x11/: ScreenshotX11.cpp  ScreenshotX11.hpp
